--- a/WeatherGalaxy.Entities/WeatherGalaxy.Entities.csproj
+++ b/WeatherGalaxy.Entities/WeatherGalaxy.Entities.csproj
@@ -38,9 +38,6 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="WeatherGalaxy.Utils">
-      <HintPath>..\WeatherGalaxy.Utils\bin\Debug\WeatherGalaxy.Utils.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CelestialBody.cs" />
@@ -49,6 +46,7 @@
     <Compile Include="Planet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sun.cs" />
+    <Compile Include="Weather.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Weathergalaxy.DTO\WeatherGalaxy.DTO.csproj">
@@ -58,6 +56,10 @@
     <ProjectReference Include="..\WeatherGalaxy.Enums\WeatherGalaxy.Enums.csproj">
       <Project>{7705A2D5-0BCB-4799-8591-0E36CD56DB30}</Project>
       <Name>WeatherGalaxy.Enums</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\WeatherGalaxy.Utils\WeatherGalaxy.Utils.csproj">
+      <Project>{8a4be121-ece0-48b0-a8d1-46a652116579}</Project>
+      <Name>WeatherGalaxy.Utils</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
